[package]
name = "tctest"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { path = "/home/afredette/projects/aya/aya", features=["async_tokio"] }
aya-log = { path = "/home/afredette/projects/aya/aya-log"}
tctest-common = { path = "../tctest-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "tctest"
path = "src/main.rs"
